hosting on github.io

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "faraway_starwars",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://valerifc.github.io/faraway_starwars",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -24,6 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
