--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "sass": "^1.65.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
+  },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
